# noria-operator

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md
helm/: index.yaml  noria-operator-0.1.0.tgz  noria-operator.yaml
helm/noria-operator/: Chart.yaml  values.yaml
helm/noria-operator/templates/: _helpers.tpl  cluster-role-binding.yaml  cluster-role.yaml  crd.yaml  deployment.yaml  service-account.yaml
manifest/: crd.yaml  simple.yaml
noria-image/: .dockerignore  Dockerfile  docker-compose.yaml
src/: error.rs  main.rs  model.rs  mysql.rs  server.rs  ui.rs  zookeeper.rs
