[package]
name = "noria-operator"
version = "0.1.0"
authors = ["Noria Operator authors"]
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
roperator = { branch = "master", git = "https://github.com/psFried/roperator" }
# roperator = { path = "./roperator" }
env_logger = "0.7.1"
log = "0.4.8"
failure = "0.1.1"
hex = "0.4.2"
structopt = "0.3"
